# self_healing_rag

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml  rag_agent.py
docs/: machine_learning.txt  python_basics.txt
